--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DocumentViewer</string>
-    <string name="title_activity_pdf_display">PdfDisplayActivity</string>
-    <string name="title_activity_file_list">FileListActivity</string>
+    <string name="app_name">文档查看</string>
+    <string name="title_activity_file_list">文件列表</string>
+    <string name="title_activity_pdf_view">PDF查看器</string>
     <string name="action_settings">Settings</string>
-    <string name="open">Open</string>
-    <string name="title_activity_pdf_view">PdfViewActivity</string>
+
+
+    <string name="pull_to_refresh">下拉更新文件列表</string>
+    <string name="release_to_refresh">释放更新文件列表</string>
+    <string name="loading">正在更新文件列表</string>
+    <string name="updated">列表更新于</string>
+    <string name="no_data">没有文件</string>
 
 </resources>
